[tool.poetry]
name = "electricity-market-price-forecasting"
version = "0.1.0"
description = "High-accuracy day-ahead market price forecasts for electricity traders and automated trading systems"
authors = ["Energy Trading Team <trading@example.com>"]
readme = "README.md"
repository = "https://github.com/example/electricity-market-price-forecasting"
packages = [{include = "electricity_market_forecasting"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"        # Data manipulation and storage - v2.0.0+
numpy = "^1.24.0"        # Numerical computations - v1.24.0+
scikit-learn = "^1.2.0"  # Linear modeling implementation - v1.2.0+
pandera = "^0.16.0"      # Data validation - v0.16.0+
dash = "^2.9.0"          # Interactive visualization framework - v2.9.0+
plotly = "^5.14.0"       # Underlying plotting library - v5.14.0+
apscheduler = "^3.10.0"  # Task scheduling - v3.10.0+
loguru = "^0.7.0"        # Enhanced logging - v0.7.0+

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"        # Primary testing framework
pytest-cov = "^4.1.0"    # Coverage reporting
pytest-mock = "^3.10.0"  # Mocking support for tests
black = "^23.3.0"        # Code formatting
isort = "^5.12.0"        # Import sorting
mypy = "^1.3.0"          # Static type checking
pre-commit = "^3.3.2"    # Git hooks for code quality

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=electricity_market_forecasting --cov-report=term-missing --cov-fail-under=90"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true